--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,7 +1,7 @@
 // NEW
 // Navigation bar 
 // ONLY AVAILABLE ON WEB
-@media all and (min-width: $screen_md_2 + 1px) {
+@media all and (min-width: ($screen_md_2 + 1px)) {
     //...
 }
 
@@ -12,7 +12,7 @@ header {
 
     // Only apply to screen bigger than 992px
     // Only apply to non-mobile devices
-    @media all and (min-width: $screen_md_2 + 1) {
+    @media all and (min-width: ($screen_md_2 + 1px)) {
         z-index: 999;
         position: fixed;
 
